giving the button a name

--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
     <div align="center"><form action="/auth" method="POST">
       Username: <input type="text" name="username"><br>
       Password: <input type="password" name="password"><br>
-      <input type="submit" name="loginPage">
+      <input type="submit" name="loginPage" value = "Login">
     </form></div>
   </body>
 </html>
